book/tests/snapshots/snapshot__tests__prql__syntax-0.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nfilter department == \"Product\"\nselect [first_name, last_name]\n"
---
from employees
filter department == "Product"
select [
  first_name,
  last_name,
]



