book/tests/snapshots/snapshot__tests__prql__syntax-11.prql.snap
---
source: book/tests/snapshot.rs
expression: "prql target:sql.postgres\nfrom employees\nselect `first name`\n"
---
prql target:sql.postgres



from employees
select `first name`



