book/tests/snapshots/snapshot__tests__prql__syntax-13.prql.snap
---
source: book/tests/snapshot.rs
expression: "prql target:sql.bigquery\nfrom `project-foo.dataset.table`\njoin `project-bar.dataset.table` [==col_bax]\n"
---
prql target:sql.bigquery



from `project-foo.dataset.table`
join `project-bar.dataset.table` [==col_bax]



