book/tests/snapshots/snapshot__tests__prql__syntax-15.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nfilter id == $1\n"
---
from employees
filter id == $1




