book/tests/snapshots/snapshot__tests__prql__syntax-17.prql.snap
---
source: book/tests/snapshot.rs
expression: "std.from my_table\nstd.select [from = my_table.a, take = my_table.b]\nstd.take 3\n"
---
std.from my_table
std.select [
  from = my_table.a,
  take = my_table.b,
]
std.take 3



