book/tests/snapshots/snapshot__tests__prql__syntax-2.prql.snap
---
source: book/tests/snapshot.rs
expression: "from numbers\nderive [x = 1, y = 2]\nderive [\n  a = x,\n  b = y\n]\nderive [\n  c = a,\n  d = b,\n]\n"
---
from numbers
derive [
  x = 1,
  y = 2,
]
derive [
  a = x,
  b = y,
]
derive [
  c = a,
  d = b,
]



