book/tests/snapshots/snapshot__tests__prql__syntax-5.prql.snap
---
source: book/tests/snapshot.rs
expression: "from foo\nselect [\n  circumference = diameter * 3.14159,\n  color,\n]\nfilter circumference > 10 and color != \"red\"\n"
---
from foo
select [
  circumference = diameter * 3.14159,
  color,
]
filter circumference > 10 and color != "red"



