book/tests/snapshots/snapshot__tests__prql__syntax-7.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nderive total_distance = sum distance\n"
---
from employees
derive total_distance = sum distance



